<resources>
    <string name="capturas">Captures</string>
    <string name="pok_dex">Pokedex</string>
    <string name="ajustes">Adjust</string>
    <string name="detalles">Details</string>
    <string name="captura_index">Index:</string>
    <string name="captura_type">Type(s):</string>
    <string name="captura_weight">Weight:</string>
    <string name="captura_height">Height:</string>
    <string name="button_about">About</string>
    <string name="buttom_close_sesion">Close sesion</string>
    <string name="radio_language">Language:</string>
    <string name="radio_spanish">Spanish</string>
    <string name="radio_english">English</string>
    <string name="button_delete">Delete</string>
    <string name="toast_no_delete">Please activate the delete option in settings first.</string>
    <string name="toast_close_sesion">you just logged out</string>
    <string name="eliminar_pokemons">Eliminate pokemons</string>
    <string name="titulo_cuadro_acerca_de">About Pokemons</string>
    <string name="texto_cuadro_acerca_de">Application developed by Ramón López Fontanilla. Version 1.0.0</string>
    <string name="normal">normal</string>
    <string name="fighting">fighting</string>
    <string name="flying">flying</string>
    <string name="poison">poison</string>
    <string name="ground">ground</string>
    <string name="rock">rock</string>
    <string name="bug">bug</string>
    <string name="ghost">ghost</string>
    <string name="steel">steel</string>
    <string name="fire">fire</string>
    <string name="water">water</string>
    <string name="grass">grass</string>
    <string name="electric">electric</string>
    <string name="psychic">psychic</string>
    <string name="ice">ice</string>
    <string name="dragon">dragon</string>
    <string name="dark">dark</string>
    <string name="fairy">fairy</string>
    <string name="stellar">stellar</string>
    <string name="unknown">unknown</string>
</resources>