<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/amarillo">

    <Switch
        android:id="@+id/switch_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/eliminar_pokemons"
        android:textSize="16sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radio_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_language"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultFocusHighlightEnabled="true"
            android:text="@string/radio_spanish" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_english" />

    </RadioGroup>

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/close_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttom_close_sesion"
        android:layout_marginTop="20dp"/>

</LinearLayout>