<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/amarillo">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokemon_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="Nombre"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pokemon_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/logo_pokemon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/captura_index"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/captura_type"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/captura_weight"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/captura_height"
                        android:textSize="25sp" />

                </LinearLayout>

                <Space
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/indice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tool:textAlignment="center" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Veneno"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tool:textAlignment="center" />

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="30"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tool:textAlignment="center" />

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="60"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tool:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/button_delete" />
    <TextView
        android:id="@+id/positionInPokedexRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="center"/>
</LinearLayout>